--- a/A07-template.Rmd
+++ b/A07-template.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "A07- ggplot"
-author: "YOUR NAME"
-date: "DATE"
+author: "Edward Cho"
+date: "6/9/2023"
 output: html_notebook
 ---
 
@@ -69,7 +69,9 @@ When you make your plot, you will likely find that the axis range is being set b
 
 ```{r}
 ### Your code here
-
+Trips %>%
+  ggplot(aes(x = as.numeric(edate - sdate))) +
+  geom_density(fill = "gray", color = duration)
 
 ```
 
